Use wrapper `govuk-frontend` package for workspaces
This change temporarily links `govuk-frontend` to ./package/src via the wrapper package’s package.json `exports` field

For compatibility `npm publish` can continue from ./package/dist where the published package.json still exists with the current `exports` unchanged

--- a/package.json
+++ b/package.json
@@ -8,9 +8,9 @@
   },
   "license": "MIT",
   "workspaces": [
+    "package",
     "app",
     "docs/examples/*",
-    "package/dist",
     "shared/*"
   ],
   "scripts": {
@@ -48,7 +48,6 @@
     "@typescript-eslint/eslint-plugin": "^5.59.0",
     "@typescript-eslint/parser": "^5.59.0",
     "autoprefixer": "^9.8.8",
-    "cheerio": "^1.0.0-rc.12",
     "cssnano": "^6.0.0",
     "cssnano-preset-default": "^6.0.0",
     "editorconfig-checker": "^5.0.1",
@@ -65,7 +64,6 @@
     "govuk-frontend-tasks": "*",
     "gulp": "^4.0.2",
     "gulp-cli": "^2.3.0",
-    "html-validate": "7.15.1",
     "husky": "^8.0.3",
     "jest": "^29.5.0",
     "jest-environment-node-single-context": "^29.0.0",
@@ -73,8 +71,6 @@
     "jest-serializer-html": "^7.1.0",
     "lint-staged": "^13.2.1",
     "minimatch": "^9.0.0",
-    "nunjucks": "^3.2.4",
-    "outdent": "^0.8.0",
     "postcss": "^8.4.23",
     "postcss-load-config": "^4.0.1",
     "postcss-pseudo-classes": "^0.2.1",
@@ -84,15 +80,11 @@
     "postcss-unrgba": "^1.1.1",
     "prettier": "^2.8.8",
     "puppeteer": "^19.11.1",
-    "sass-color-helpers": "^2.1.1",
-    "sass-embedded": "^1.62.0",
     "sassdoc": "^2.7.4",
-    "slash": "^5.0.0",
     "standard": "^17.0.0",
     "stylelint": "^14.16.1",
     "stylelint-config-gds": "^0.2.0",
     "stylelint-order": "^6.0.3",
-    "typed-query-selector": "^2.10.1",
     "typedoc": "^0.24.6",
     "typescript": "^5.0.4"
   },
