--- a/packages/govuk-frontend-review/package.json
+++ b/packages/govuk-frontend-review/package.json
@@ -29,8 +29,8 @@
     "govuk-frontend-lib": "*",
     "highlight.js": "^11.7.0",
     "html5shiv": "^3.7.3",
-    "iframe-resizer": "3.5.15",
-    "jquery": "1.12.4",
+    "iframe-resizer": "^3.5.15",
+    "jquery": "^1.12.4",
     "js-beautify": "^1.14.7",
     "marked": "^4.3.0",
     "nunjucks": "^3.2.4",
