--- a/shared/tasks/package.json
+++ b/shared/tasks/package.json
@@ -27,7 +27,7 @@
     "postcss": "^8.4.23",
     "postcss-load-config": "^4.0.1",
     "puppeteer": "^19.11.1",
-    "rollup": "0.59.4",
+    "rollup": "^0.59.4",
     "rollup-plugin-node-resolve": "^4.2.4",
     "rollup-plugin-replace": "^2.2.0",
     "sass-embedded": "^1.62.0",
