--- a/sassdoc.config.yaml
+++ b/sassdoc.config.yaml
@@ -15,6 +15,7 @@ groups:
   settings/colours: Settings / Colours
   settings/compatibility: Settings / Compatibility
   settings/global-styles: Settings / Global Styles
+  settings/internet-explorer-8: Settings / IE8
   settings/links: Settings / Links
   settings/measurements: Settings / Measurements
   settings/media-queries: Settings / Media Queries
@@ -24,6 +25,7 @@ groups:
   tools: Tools
   tools/assets: Tools / Assets
   tools/compatibility-mode: Tools / Compatibility Mode
+  tools/internet-explorer-8: Tools / IE8
   tools/unit-conversion: Tools / Unit Conversion
   helpers: Helpers
   overrides: Overrides
