Use wrapper `govuk-frontend` package for workspaces
This change temporarily links `govuk-frontend` to ./package/src via the wrapper package’s package.json `exports` field

For compatibility `npm publish` can continue from ./package/dist where the published package.json still exists with the current `exports` unchanged

--- a/package/tsconfig.json
+++ b/package/tsconfig.json
@@ -7,6 +7,7 @@
     "../shared/helpers",
     "../shared/lib"
   ],
+  "exclude": ["./dist/**"],
   "compilerOptions": {
     "lib": ["ESNext", "DOM"],
     "target": "ES2015",
