--- a/package.json
+++ b/package.json
@@ -8,9 +8,9 @@
   },
   "license": "MIT",
   "workspaces": [
+    "package",
     "app",
     "docs/examples/*",
-    "package/dist",
     "shared/*"
   ],
   "scripts": {
@@ -49,7 +49,6 @@
     "@typescript-eslint/eslint-plugin": "^5.59.2",
     "@typescript-eslint/parser": "^5.59.2",
     "autoprefixer": "^9.8.8",
-    "cheerio": "^1.0.0-rc.12",
     "cssnano": "^6.0.0",
     "cssnano-preset-default": "^6.0.0",
     "editorconfig-checker": "^5.0.1",
@@ -66,7 +65,6 @@
     "govuk-frontend-tasks": "*",
     "gulp": "^4.0.2",
     "gulp-cli": "^2.3.0",
-    "html-validate": "7.15.1",
     "husky": "^8.0.3",
     "jest": "^29.5.0",
     "jest-environment-node-single-context": "^29.0.0",
@@ -74,8 +72,6 @@
     "jest-serializer-html": "^7.1.0",
     "lint-staged": "^13.2.1",
     "minimatch": "^9.0.0",
-    "nunjucks": "^3.2.4",
-    "outdent": "^0.8.0",
     "postcss": "^8.4.23",
     "postcss-load-config": "^4.0.1",
     "postcss-pseudo-classes": "^0.2.1",
@@ -85,10 +81,7 @@
     "postcss-unrgba": "^1.1.1",
     "prettier": "^2.8.8",
     "puppeteer": "^19.11.1",
-    "sass-color-helpers": "^2.1.1",
-    "sass-embedded": "^1.62.0",
     "sassdoc": "^2.7.4",
-    "slash": "^5.0.0",
     "standard": "^17.0.0",
     "stylelint": "^14.16.1",
     "stylelint-config-gds": "^0.2.0",
