--- a/shared/config/tsconfig.json
+++ b/shared/config/tsconfig.json
@@ -1,4 +1,5 @@
 {
   "extends": "../../tsconfig.base.json",
-  "include": ["**/*.js", "**/*.mjs"]
+  "include": ["**/*.js", "**/*.mjs", "../../package"],
+  "exclude": ["../../package/dist/**"]
 }
