Fix missing `tsc` binary on Windows
When a build is skipped (already in cache) we assume the global “npm get cache” location at `~/.npm` still has all the binaries we need such as eslint, stylelint, tsc etc

But Windows can’t find them unless `node_modules/.bin` is restored

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -48,6 +48,9 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
 
+      - name: Restore dependencies
+        uses: ./.github/workflows/actions/install-node
+
       - name: Build
         uses: ./.github/workflows/actions/build
 
