Replace Puppeteer “Chromium” with “Google Chrome for Testing”
Puppeteer v20 now downloads Chrome (not Chromium) by default

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -30,7 +30,7 @@ jobs:
     runs-on: ${{ github.event.inputs.runner || 'ubuntu-latest' }}
 
     env:
-      PUPPETEER_SKIP_CHROMIUM_DOWNLOAD: true
+      PUPPETEER_SKIP_DOWNLOAD: true
 
     steps:
       - name: Checkout code
