--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -194,7 +194,7 @@ jobs:
       - name: Restore build
         uses: ./.github/workflows/actions/build
 
-      - name: Cache Jest
+      - name: Cache task
         if: ${{ matrix.task.cache }}
         uses: actions/cache@v3
         with:
