Configure Percy with path to “Google Chrome for Testing”
Percy already uses the default Puppeteer browser for taking screenshots, but it was downloading another browser for asset discovery

See: https://docs.percy.io/docs/skipping-asset-discovery-browser-download

```
[percy] Downloading Chromium 929511...
[percy] Successfully downloaded Chromium 929511
```

--- a/.github/workflows/screenshots.yml
+++ b/.github/workflows/screenshots.yml
@@ -16,6 +16,8 @@ jobs:
     env:
       PERCY_PARALLEL_NONCE: ${{ github.run_id }}-${{ github.run_attempt }}
       PERCY_TOKEN: ${{ secrets.PERCY_TOKEN }}
+      PERCY_POSTINSTALL_BROWSER: false
+      PUPPETEER_SKIP_DOWNLOAD: true
 
     # Skip when secrets are unavailable on forks
     if: ${{ !github.event.pull_request.head.repo.fork }}
