--- a/.github/workflows/diff-change-to-dist.yaml
+++ b/.github/workflows/diff-change-to-dist.yaml
@@ -37,6 +37,13 @@ jobs:
           # as all we need is to let Git diff the two references
           bin/dist-diff.sh origin/$GITHUB_BASE_REF $GITHUB_WORKSPACE
 
+      - name: Save distribution diffs
+        uses: actions/upload-artifact@v3
+        with:
+          name: Dist diff
+          path: dist*.diff
+          if-no-files-found: ignore
+
       - name: Add comment to PR
         uses: actions/github-script@v6
         with:
