--- a/packages/govuk-frontend-review/package.json
+++ b/packages/govuk-frontend-review/package.json
@@ -35,11 +35,14 @@
     "shuffle-seed": "^1.1.6"
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.14",
     "cheerio": "^1.0.0-rc.12",
+    "cssnano": "^6.0.1",
     "govuk-frontend-tasks": "*",
     "gulp": "^4.0.2",
     "gulp-cli": "^2.3.0",
     "nodemon": "^2.0.22",
+    "postcss-pseudo-classes": "^0.2.1",
     "sassdoc": "^2.7.4",
     "slash": "^5.1.0",
     "supertest": "^6.3.3",
