Move documentation generators to `govuk-frontend-review`

--- a/packages/govuk-frontend-review/package.json
+++ b/packages/govuk-frontend-review/package.json
@@ -12,6 +12,8 @@
     "predev": "npm run build",
     "dev": "gulp dev --color",
     "build": "gulp build --color",
+    "build:sassdoc": "sassdoc --config sassdoc.config.yaml ../govuk-frontend/src/govuk",
+    "build:jsdoc": "typedoc",
     "serve": "nodemon",
     "start": "node src/start.mjs",
     "test:screenshots": "gulp screenshots --color"
@@ -38,7 +40,9 @@
     "gulp": "^4.0.2",
     "gulp-cli": "^2.3.0",
     "nodemon": "^2.0.22",
+    "sassdoc": "^2.7.4",
     "slash": "^5.1.0",
-    "supertest": "^6.3.3"
+    "supertest": "^6.3.3",
+    "typedoc": "^0.24.7"
   }
 }
