--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "lint:js:cli": "eslint --cache --cache-location .cache/eslint --cache-strategy content --color --ignore-path .gitignore --max-warnings 0",
     "lint:prettier": "npm run lint:prettier:cli -- \"**/*.{json,md,yaml,yml}\"",
     "lint:prettier:cli": "prettier --cache --cache-location .cache/prettier --cache-strategy content --check",
-    "lint:scss": "npm run lint:scss:cli -- \"packages/govuk-frontend?(-review)/**/*.scss\"",
+    "lint:scss": "npm run lint:scss:cli -- \"**/*.scss\"",
     "lint:scss:cli": "stylelint --cache --cache-location .cache/stylelint --cache-strategy content --color --ignore-path .gitignore --max-warnings 0",
     "prepare": "node -e \"try { require('husky').install() } catch (e) {if (e.code !== 'MODULE_NOT_FOUND') throw e}\""
   },
