--- a/packages/govuk-frontend/package.json
+++ b/packages/govuk-frontend/package.json
@@ -2,8 +2,8 @@
   "name": "govuk-frontend",
   "description": "GOV.UK Frontend contains the code you need to start building a user interface for government platforms and services.",
   "version": "4.6.0",
-  "main": "govuk/all.js",
-  "module": "govuk-esm/all.mjs",
+  "main": "dist/govuk/all.js",
+  "module": "dist/govuk-esm/all.mjs",
   "files": [
     "dist",
     "govuk-prototype-kit.config.json",
@@ -12,18 +12,18 @@
   ],
   "exports": {
     ".": {
-      "sass": "./govuk/all.scss",
-      "import": "./govuk-esm/all.mjs",
-      "require": "./govuk/all.js"
+      "sass": "./dist/govuk/all.scss",
+      "import": "./dist/govuk-esm/all.mjs",
+      "require": "./dist/govuk/all.js"
     },
-    "./govuk/": "./govuk/",
-    "./govuk-esm/": "./govuk-esm/",
-    "./package.json": "./package.json"
+    "./package.json": "./package.json",
+    "./src/*": "./src/*",
+    "./*": "./dist/*"
   },
   "sideEffects": [
-    "govuk-esm/vendor/**"
+    "**/vendor/**"
   ],
-  "sass": "govuk/all.scss",
+  "sass": "dist/govuk/all.scss",
   "engines": {
     "node": "^16.16.0 || ^18.12.0",
     "npm": "^8.1.0 || ^9.1.0"
