--- a/packages/govuk-frontend/package.json
+++ b/packages/govuk-frontend/package.json
@@ -25,8 +25,7 @@
   ],
   "sass": "dist/govuk/all.scss",
   "engines": {
-    "node": "^16.16.0 || ^18.12.0",
-    "npm": "^8.1.0 || ^9.1.0"
+    "node": ">= 4.2.0"
   },
   "author": {
     "name": "GOV.UK Design System Team (Government Digital Service)",
