Configure paths so `tsc` can locate GOV.UK Frontend source
Our main export in package.json is `"dist/govuk/all.js"` so we need to remap this to our source code for internal use only, otherwise code autocomplete doesn’t work in the review app

This can be removed if we export type declarations in the package instead

--- a/packages/govuk-frontend-review/tsconfig.json
+++ b/packages/govuk-frontend-review/tsconfig.json
@@ -8,5 +8,10 @@
     "../../shared/lib",
     "../../shared/tasks"
   ],
-  "exclude": ["./dist/**", "../govuk-frontend/dist/**"]
+  "exclude": ["./dist/**", "../govuk-frontend/dist/**"],
+  "compilerOptions": {
+    "paths": {
+      "govuk-frontend": ["../govuk-frontend/src/govuk/all.mjs"]
+    }
+  }
 }
