--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "build:app": "npm run build --workspace govuk-frontend-review",
     "build:package": "npm run build:package --workspace govuk-frontend",
     "build:release": "npm run build:release --workspace govuk-frontend",
-    "build:types": "tsc --build tsconfig.build.json",
+    "build:types": "tsc --build tsconfig.json tsconfig.build.json",
     "postbuild:package": "jest --color --selectProjects \"Build tasks\" --testMatch \"**/*package.test*\"",
     "postbuild:release": "jest --color --selectProjects \"Build tasks\" --testMatch \"**/*release.test*\"",
     "heroku-postbuild": "npm run build --workspace govuk-frontend --workspace govuk-frontend-review",
