--- a/packages/govuk-frontend/tsconfig.json
+++ b/packages/govuk-frontend/tsconfig.json
@@ -1,8 +1,8 @@
 {
   "extends": "../../tsconfig.base.json",
   "include": [
-    "./src/**/*.js",
-    "./src/**/*.mjs",
+    "**/*.js",
+    "**/*.mjs",
     "../../shared/config",
     "../../shared/helpers",
     "../../shared/lib",
