--- a/packages/govuk-frontend-review/package.json
+++ b/packages/govuk-frontend-review/package.json
@@ -35,6 +35,8 @@
     "shuffle-seed": "^1.1.6"
   },
   "devDependencies": {
+    "@rollup/plugin-node-resolve": "^15.0.2",
+    "@rollup/plugin-terser": "^0.4.1",
     "autoprefixer": "^10.4.14",
     "cheerio": "^1.0.0-rc.12",
     "cssnano": "^6.0.1",
@@ -43,6 +45,7 @@
     "gulp-cli": "^2.3.0",
     "nodemon": "^2.0.22",
     "postcss-pseudo-classes": "^0.2.1",
+    "rollup": "^3.21.7",
     "sassdoc": "^2.7.4",
     "slash": "^5.1.0",
     "supertest": "^6.3.3",
