Add comment on PR workflow
Co-authored-by: Colin Rotherham <work@colinr.com>

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "license": "MIT",
   "workspaces": [
+    ".github/workflows/scripts",
     "shared/*",
     "packages/govuk-frontend",
     "packages/govuk-frontend-review",
@@ -77,7 +78,9 @@
     "typescript": "^5.0.4"
   },
   "optionalDependencies": {
+    "@actions/github": "^5.1.1",
     "@jest/environment": "^29.5.0",
+    "@octokit/rest": "19.0.11",
     "@types/express": "^4.17.17",
     "@types/gulp": "^4.0.10",
     "@types/jest": "^29.5.1",
