Use separate comments for dist diffs (JS, CSS and other files)
This should limit the risks of the comment being too large to be posted

--- a/.github/workflows/diff-change-to-dist.yaml
+++ b/.github/workflows/diff-change-to-dist.yaml
@@ -54,17 +54,33 @@ jobs:
             const { readFile } = require('node:fs/promises')
             const { comment } = await import('${{ github.workspace }}/.github/workflows/scripts/comments.mjs')
 
-            // Read diff from previous step
-            const diffText = await readFile('${{ github.workspace }}/dist.diff', 'utf8')
-
             // PR information
             const number = '${{ github.event.pull_request.number }}'
             const commit = '${{ github.event.pull_request.head.sha }}'
 
-            // Add or update comment on PR
-            await comment({ github, context }, number, 'Diff release', '## Changes to dist\n' +
-              '```diff\n' +
-              `${diffText}\n` +
-              '```\n\n' +
-              `SHA: ${commit}\n`
-            )
+            const diffs = [{
+              file: 'dist-js.diff',
+              title: 'JavaScript changes to `dist`',
+              marker: 'dist-diff-js'
+              },{
+              file: 'dist-css.diff',
+              title: 'CSS changes to `dist`',
+              marker: 'dist-diff-css'
+            }, {
+              file: 'dist-other.diff',
+              title: 'Other changes to `dist`',
+              marker: 'dist-diff-other'
+            }]
+
+            for(const {file, title, marker} of diffs) {
+              // Read diff from previous step
+              const diffText = await readFile(`${{ github.workspace }}/${file}`, 'utf8')
+
+              // Add or update comment on PR
+              await comment({ github, context }, number, marker, `## ${title}\n` +
+                '```diff\n' +
+                `${diffText}\n` +
+                '```\n\n' +
+                `SHA: ${commit}\n`
+              )
+            }
