Extract diff commenting in a proper JS file
It'll make it easier to spot quotes/parenthesis issues, as well as typing

--- a/.github/workflows/diff-change-to-dist.yaml
+++ b/.github/workflows/diff-change-to-dist.yaml
@@ -52,35 +52,11 @@ jobs:
           github-token: ${{secrets.GITHUB_TOKEN}}
           script: |
             const { readFile } = require('node:fs/promises')
-            const { comment } = await import('${{ github.workspace }}/.github/workflows/scripts/comments.mjs')
+            const { commentDistDiffs } = await import('${{ github.workspace }}/.github/workflows/scripts/comments.mjs')
 
             // PR information
-            const number = '${{ github.event.pull_request.number }}'
+            const issueNumber = '${{ github.event.pull_request.number }}'
             const commit = '${{ github.event.pull_request.head.sha }}'
+            const workspacePath = '${{github.workspace}}'
 
-            const diffs = [{
-              file: 'dist-js.diff',
-              title: 'JavaScript changes to `dist`',
-              marker: 'dist-diff-js'
-              },{
-              file: 'dist-css.diff',
-              title: 'CSS changes to `dist`',
-              marker: 'dist-diff-css'
-            }, {
-              file: 'dist-other.diff',
-              title: 'Other changes to `dist`',
-              marker: 'dist-diff-other'
-            }]
-
-            for(const {file, title, marker} of diffs) {
-              // Read diff from previous step
-              const diffText = await readFile(`${{ github.workspace }}/${file}`, 'utf8')
-
-              // Add or update comment on PR
-              await comment({ github, context }, number, marker, `## ${title}\n` +
-                '```diff\n' +
-                `${diffText}\n` +
-                '```\n\n' +
-                `SHA: ${commit}\n`
-              )
-            }
+            await commentDistDiffs({github, context, workspacePath, issueNumber, commit})
