--- a/package.json
+++ b/package.json
@@ -84,6 +84,7 @@
     "@types/gulp": "^4.0.10",
     "@types/jest": "^29.5.1",
     "@types/jest-axe": "^3.5.5",
+    "@types/marked": "^5.0.0",
     "@types/node": "^20.2.3",
     "@types/nunjucks": "^3.2.2",
     "puppeteer": "^20.3.0"
