Make diff step a bit more resilient to errors
- run the comments in parallel so they don't break each other
- add continue-on-error in case we add a further step

--- a/.github/workflows/diff-change-to-dist.yaml
+++ b/.github/workflows/diff-change-to-dist.yaml
@@ -51,7 +51,7 @@ jobs:
         with:
           github-token: ${{secrets.GITHUB_TOKEN}}
           script: |
-            const { commentDiff } = await import('${{ github.workspace }}/.github/workflows/scripts/comments.mjs')
+            const { commentDiffs } = await import('${{ github.workspace }}/.github/workflows/scripts/comments.mjs')
 
             // PR information
             const issueNumber = ${{ github.event.pull_request.number }}
@@ -75,6 +75,4 @@ jobs:
               }
             ]
 
-            for (const diff of diffs) {
-              await commentDiff({ github, context, commit }, issueNumber, diff)
-            }
+            await commentDiffs({ github, context, commit }, issueNumber, diffs)
