Configure remapped `govuk-frontend` JSDoc types from tsconfig.base.json
This is preparation for `import 'govuk-frontend'` from other packages than the review app

--- a/packages/govuk-frontend-review/tsconfig.json
+++ b/packages/govuk-frontend-review/tsconfig.json
@@ -8,10 +8,5 @@
     "../../shared/lib",
     "../../shared/tasks"
   ],
-  "exclude": ["./dist/**", "../govuk-frontend/dist/**"],
-  "compilerOptions": {
-    "paths": {
-      "govuk-frontend": ["../govuk-frontend/src/govuk/all.mjs"]
-    }
-  }
+  "exclude": ["./dist/**", "../govuk-frontend/dist/**"]
 }
