Add default “npm run build” for project
Our default build is to prepare the review app for launch

1. Build `govuk-frontend` package
2. Build `govuk-frontend-review` assets

--- a/package.json
+++ b/package.json
@@ -20,17 +20,18 @@
     "build-release": "./bin/build-release.sh",
     "publish-release": "./bin/publish-release.sh",
     "pre-release": "./bin/pre-release.sh",
-    "predev": "npm run build --workspace govuk-frontend",
+    "predev": "npm run build",
     "dev": "concurrently \"npm run dev --workspace govuk-frontend-review\" \"npm run dev --workspace govuk-frontend\" --kill-others --names \"app,pkg\" --prefix-colors \"red.dim,blue.dim\"",
+    "build": "npm run build --workspace govuk-frontend --workspace govuk-frontend-review",
     "build:app": "npm run build --workspace govuk-frontend-review",
     "build:package": "npm run build:package --workspace govuk-frontend",
     "build:release": "npm run build:release --workspace govuk-frontend",
     "build:types": "tsc --build tsconfig.json tsconfig.build.json",
     "postbuild:package": "jest --color --selectProjects \"Build tasks\" --testMatch \"**/*package.test*\"",
     "postbuild:release": "jest --color --selectProjects \"Build tasks\" --testMatch \"**/*release.test*\"",
-    "heroku-postbuild": "npm run build --workspace govuk-frontend --workspace govuk-frontend-review",
+    "heroku-postbuild": "npm run build",
     "postheroku-postbuild": "NPM_CONFIG_PRODUCTION=true npm ci --ignore-scripts --omit=optional --workspace govuk-frontend-review",
-    "pretest": "npm run build --workspace govuk-frontend --workspace govuk-frontend-review",
+    "pretest": "npm run build",
     "test": "jest --color --ignoreProjects \"Build tasks\" --maxWorkers=50%",
     "lint": "npm run lint:editorconfig && npm run lint:prettier && npm run lint:js && npm run lint:scss",
     "lint:editorconfig": "npm run lint:editorconfig:cli",
