Run Rollup stats after `npm run build:package`

--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "build": "npm run build:package",
     "build:package": "gulp build:package --color",
     "build:release": "gulp build:release --color",
+    "build:stats": "npm run stats --workspace govuk-frontend-stats",
     "dev": "gulp dev --color"
   },
   "devDependencies": {
