Use pinned `puppeteer-core` Chrome browser version
This resolves an issue where `resolveBuildId()` was returning Chrome v114 even though `puppeteer-core` was still pinned to Chrome v113

```
Error: Jest: Got error running globalSetup - /home/runner/work/govuk-frontend/govuk-frontend/shared/helpers/jest/browser/open.mjs, reason: Could not find Chrome (ver. 113.0.5672.63).
```

--- a/shared/helpers/package.json
+++ b/shared/helpers/package.json
@@ -29,6 +29,7 @@
     "sass-embedded": "^1.62.0"
   },
   "peerDependencies": {
-    "@puppeteer/browsers": ">=1"
+    "@puppeteer/browsers": ">=1",
+    "puppeteer-core": ">=20"
   }
 }
